change the red text in gap fill for incorrect/disabled answers so that it is AA compliant. Used #EB0000 instead of red. The FA icon crosses are still red but don't show up as an issue. It's possible to make the red text AAA compliant by using #B30000 or #A80000 but these appear closer to brown than red so for now thinking that AA compliant is fine especially as this only applies to small text so is AA when viewed full screen with responsive text.

--- a/modules/xerte/parent_templates/Nottingham/models_html5/gapFill.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/gapFill.css
@@ -27,17 +27,20 @@
 	}
 
 	#targetHolder .target.incorrect {
-		color:			red;
+		color:			#EB0000;
 		border-color:	transparent;
+		font-weight:600;
 	}
 	
 	#targetHolder input.incorrect, #targetHolder input[incorrect] {
-		color: 			red;
+		color: 			#EB0000;
+		font-weight:600;
 	}
 	
 	#targetHolder .target.incorrect {
-		color:			red;
+		color:			#EB0000;
 		border-color:	transparent;
+		font-weight:600;
 	}
 	
 	#targetHolder .target.answerShown, #targetHolder input.answerShown {
@@ -50,7 +53,8 @@
 	}
 	
 	#targetHolder select[disabled] {
-		color: red;
+		color: #EB0000;
+		font-weight:600;
 	}
 	
 	#targetHolder select[disabled].correct {
